--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -472,7 +472,48 @@ div#DataTables_Table_0_paginate span .paginate_button{
     margin-right: 7px;
 }
 
+// modal
+
+.modalMain{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 99999;
+    background-color: #0000005d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalWrapper{
+    width: 500px;
+    border-radius: 13px;
+    background-color: $body-bg;
+}
+
 // product page
+
+.closeModal{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: $body-bg;
+    color: $body-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+label.d-flex::after {
+    background: transparent !important;
+}
 
 .productWrapper{
     width: 300px;
@@ -490,48 +531,61 @@ div#DataTables_Table_0_paginate span .paginate_button{
     color: $body-color;
 }
 
+// dashboard header
+
+.profileTwo{
+    width: 45px !important;
+    height: 45px !important;
+    object-fit: cover !important;
+}
+
+.dropdownPropile{
+    width: 230px;
+    position: absolute;
+    right: 0px;
+    top: 40px;
+    background-color: $body-bg;
+}
+
+.dropdownPropile2{
+    width: 230px;
+    position: absolute;
+    right: -190px;
+    top: 40px;
+    background-color: $body-bg;
+}
+
+.dropdownTheme{
+    width: 150px;
+    position: absolute;
+    right: 0;
+    top: 40px;
+    background-color: $body-bg;
+}
+
+.profileListMenu{
+    display: block;
+    transition: all 0.3s ease-in-out;
+    text-decoration: none;
+    color: $body-color;
+    font-size: 14px;
+}
+
+.profileListMenu:hover{
+    background-color: $gray;
+}
+
+.profileListMenu:active{
+    background-color: $primary;
+}
+
+.profileListBorder{
+    border-top: 2px solid #ddd;
+}
+
 
 // responsive design
 
-@include media-breakpoint-up(sm) {
-
-    .sidebarWrap{
-        width: 60px !important;
-    }
-
-    .forDefault{
-        display: none;
-    }
-
-    .forMinOne{
-        display: block;
-    }
-
-    .dashMenuItem span{
-        display: none;
-    }
-    
-    .d-flex.justify-content-start.align-items-center.dashMenuItem.rounded.w-100{
-        justify-content: center !important;
-    }
-
-    .col.contentWrapper {
-        width: 89% !important;
-    }
-
-    
-    .sidebarWrapTwo{
-        height: 100vh;
-        width: 10% !important;
-    }
-    .lastProductOrderTableWrap{
-        flex-direction: column !important;
-    }
-    .lastProductOrderTableWrap .firstBlockofLastProductOrderTableWrap{
-        width: 100% !important;
-    }
-
-}
 
 @include media-breakpoint-up(md) {
 
@@ -573,6 +627,55 @@ div#DataTables_Table_0_paginate span .paginate_button{
         width: 100% !important;
     }
     
+}
+
+@include media-breakpoint-up(sm) {
+
+    .sidebarWrap{
+        width: 60px !important;
+    }
+
+    .forDefault{
+        display: none;
+    }
+
+    .forMinOne{
+        display: block;
+    }
+
+    .dashMenuItem span{
+        display: none;
+    }
+    
+    .d-flex.justify-content-start.align-items-center.dashMenuItem.rounded.w-100{
+        justify-content: center !important;
+    }
+    
+    .sidebarWrapTwo {
+        height: 100vh;
+        width: 15% !important;
+    }
+
+    .lastProductOrderTableWrap{
+        flex-direction: column !important;
+    }
+    .lastProductOrderTableWrap .firstBlockofLastProductOrderTableWrap{
+        width: 100% !important;
+    }
+
+    .contentWrapper {
+        width: 85% !important;
+    }
+    
+    .contentWrapper {
+        padding-left: 20px !important;
+        padding-right: 20px !important;
+    }
+
+    .col-md-2.sidebarWrap {
+        padding: 0px 10px !important;
+    }
+
 }
 
 @include media-breakpoint-up(lg) {
