--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -8,6 +8,7 @@ $color: #ffffff;
 $body-element: #FFFFFF;
 $sidebar: #0D0E12;
 $primary: #3E93F9;
+$primary-light: #3e92f949;
 $secondary: rgb(55, 55, 55);
 $danger: #F8285A;
 $success: #17C653;
