--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -124,6 +124,17 @@ a{
 // 	.add, .cut { display: none; }
 // }
 
+@media print { 
+    #invoicePrintable { display: inline-block !important; }
+    //adjust accordingly margin: 0px !important; 
+    //adjust accordingly transform: scale(0.5) !important; 
+    //adjust accordingly height: 100%; 
+    //adjust accordingly page-break-before: avoid; } 
+    // .hidden-on-print { display: none !important; } 
+    
+} 
+
+
 // dashboard header and sidebar design 
 
 .dashMenuItem{
@@ -835,6 +846,19 @@ label.d-flex::after {
     margin-left: 10px;
     font-size: 15px;
     color: $body-color;
+}
+
+
+// profile page
+
+.profilePageImg{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.break{
+    border-top: 2px solid #e7e7e7;
 }
 
 
