--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -116,23 +116,27 @@ a{
 
 .inVoiceWrap tr:hover .cut { opacity: 1; }
 
-// @media print {
-// 	* { -webkit-print-color-adjust: exact; }
-// 	html { background: none; padding: 0; }
-// 	body { box-shadow: none; margin: 0; }
-// 	span:empty { display: none; }
-// 	.add, .cut { display: none; }
-// }
+@media print {
+    /* Your print-specific styles go here */
+    body {
+      visibility: hidden;
+    }
+  
+    #invoicePrintable {
+      visibility: visible;
+      margin: auto;
+    }
+}
 
-@media print { 
-    #invoicePrintable { display: inline-block !important; }
-    //adjust accordingly margin: 0px !important; 
-    //adjust accordingly transform: scale(0.5) !important; 
-    //adjust accordingly height: 100%; 
-    //adjust accordingly page-break-before: avoid; } 
-    // .hidden-on-print { display: none !important; } 
+// @media print { 
+//     #invoicePrintable { display: block !important; }
+//     //adjust accordingly margin: 0px !important; 
+//     //adjust accordingly transform: scale(0.5) !important; 
+//     //adjust accordingly height: 100%; 
+//     //adjust accordingly page-break-before: avoid; } 
+//     // .hidden-on-print { display: none !important; } 
     
-} 
+// } 
 
 
 // dashboard header and sidebar design 
@@ -777,7 +781,7 @@ label.d-flex::after {
 .messageSendBox{
     bottom: 0;
     left: 0;
-    background-color: transparent;
+    background-color: #fff;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -864,6 +868,39 @@ label.d-flex::after {
 
 // responsive design
 
+// max width 1400px
+
+@include media-breakpoint-up(xxl) { 
+
+    
+    
+}
+
+// max width 1200px
+
+@include media-breakpoint-up(xl) {
+
+
+
+}
+
+// max width 992px
+
+@include media-breakpoint-up(lg) {
+
+    .inboxSidebarWrap{
+        width: 100% !important;
+        height: 400px !important;
+    }
+
+    .inboxMessageWrap{
+        width: 100% !important;
+        height: 400px !important;
+    }
+
+}
+
+// max width 768px
 
 @include media-breakpoint-up(md) {
 
@@ -906,6 +943,8 @@ label.d-flex::after {
     }
     
 }
+
+// max width 576px
 
 @include media-breakpoint-up(sm) {
 
@@ -956,22 +995,8 @@ label.d-flex::after {
 
 }
 
-@include media-breakpoint-up(lg) {
 
 
 
-}
-
-@include media-breakpoint-up(xl) {
-
-
-
-}
-
-@include media-breakpoint-up(xxl) { 
-
-    
-    
-}
 
 
